@@ -6671,13 +6671,15 @@ package body Make is
 
          Fname.UF.Initialize;
 
-         begin
-            Fname.SF.Read_Source_File_Name_Pragmas;
+         if Config_File then
+            begin
+               Fname.SF.Read_Source_File_Name_Pragmas;
 
-         exception
-            when Err : SFN_Scan.Syntax_Error_In_GNAT_ADC =>
-               Make_Failed (Exception_Message (Err));
-         end;
+            exception
+               when Err : SFN_Scan.Syntax_Error_In_GNAT_ADC =>
+                  Make_Failed (Exception_Message (Err));
+            end;
+         end if;
       end if;
 
       --  Make sure no project object directory is recorded
@@ -7906,6 +7908,12 @@ package body Make is
                Do_Bind_Step := False;
                Do_Link_Step := False;
             end if;
+
+         --  If -gnatA is specified, make sure that gnat.adc is never read
+
+         elsif Argv'Length >= 6 and then Argv (2 .. 6) = "gnatA" then
+            Add_Switch (Argv, Compiler, And_Save => And_Save);
+            Opt.Config_File := False;
 
          elsif Argv (2 .. Argv'Last) = "nostdlib" then
 
